# rust_survival

./: .gitignore  Cargo.toml  README.md
src/: cox.rs  data.rs  lib.rs  main.rs  points.rs  rsf.rs
src/data/: factor.rs  mod.rs  survival_data.rs
tests/: .gitignore  test_train.rs
tests/data/: .gitignore  .~lock.survival_lung.csv#  MANIFEST.txt  download_large_data_with_R.r  survival_lung.csv
