[package]
name = "rust_survival"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
ndarray = "0.15"
ndarray-linalg = { version = "0.15", features = ["openblas"] }
csv = "1.2"
thiserror = "1.0"
rand = "0.9.2"
bincode = "2.0.1"
anyhow = "1.0.100"
progressbar = "0.1.0"
indicatif = "0.18.0"
serde_json = "1.0.145"
serde = {version="1.0.228" , features = ["derive"] }

#clap = { version = "4.3", features = ["derive"] }
#ndarray = { version = "0.15", features = ["blas"] }
#ndarray-linalg = { version = "0.17", features = ["openblas"] }
#csv = "1.2"
#thiserror = "1.0"

# Optional: for faster linear algebra on Linux
#blas-src = { version = "0.7", optional = true }
#openblas-src = { version = "0.10", optional = true }

#[features]
#default = []

# On Windows: use vcpkg-provided OpenBLAS or system OpenBLAS
#windows-vcpkg = ["openblas-src/vcpkg"]
#windows-system = ["openblas-src/system"]

# On Linux/macOS: allow source build (default)
#unix = ["openblas-src"]
