[package]
name = "rust_survival"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
assert_cmd = "2.0.17"
bincode = "2.0.1"
clap = { version = "4.4", features = ["derive"] }
csv = "1.2"
indicatif = "0.18.0"
ndarray = "0.15"
ndarray-linalg = { version = "0.15", features = ["openblas"] }
ordered-float = "4"
progressbar = "0.1.0"
rand = "0.9.2"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "1.0"

#clap = { version = "4.3", features = ["derive"] }
#ndarray = { version = "0.15", features = ["blas"] }
#ndarray-linalg = { version = "0.17", features = ["openblas"] }
#csv = "1.2"
#thiserror = "1.0"

# Optional: for faster linear algebra on Linux
#blas-src = { version = "0.7", optional = true }
#openblas-src = { version = "0.10", optional = true }

#[features]
#default = []

# On Windows: use vcpkg-provided OpenBLAS or system OpenBLAS
#windows-vcpkg = ["openblas-src/vcpkg"]
#windows-system = ["openblas-src/system"]

# On Linux/macOS: allow source build (default)
#unix = ["openblas-src"]
